[package]
name = "fluxrpc-core"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
async-trait = "0.1.88"
ezsockets = { version = "0.7.0", features = ["tungstenite"] }
nanoid = "0.4.0"
schemars = { version = "0.9.0", features = ["indexmap2"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0.140", features = ["indexmap"] }
tokio = { version = "1.45.1", features = ["full"] }
tracing = "0.1.41"
url = { version = "2.5.4", features = [] }
